# leistungsnachweis-firststeptoworlddomination

./: .gitignore  .travis.yml  Agent.cpp  Agent.h  CMakeLists.txt  Environment.cpp  Environment.h  Mappe1.xlsx  Num2DTable.cpp  Num2DTable.h  Policy.h  QValues.cpp  QValues.h  README.md  Reinforcement Learning.pptx  doxyconfig  main.cpp  qValues.h  testMain.cpp
docs/: _agent_8h_source.html  _environment_8h_source.html  _policy_8h_source.html  annotated.html  class_agent-members.html  class_environment-members.html  class_environment.html  class_environment_1_1_response-members.html  class_num2_d_table.html  class_policy.html  class_q_values-members.html  class_q_values.html  class_soft_max_policy-members.html  class_threshold_policy-members.html  class_value_agent.html  classes.html  files.html  functions.html  functions_func.html  index.html  md__r_e_a_d_m_e.html  pages.html  struct_agent_test-members.html  struct_agent_test.html
docs/html/: _environment_8h_source.html  _num2_d_table_8h_source.html  _policy_8h_source.html  annotated.html  class_agent-members.html  class_agent.html  class_environment_1_1_response.html  class_num2_d_table-members.html  class_num2_d_table.html  class_policy-members.html  class_q_values-members.html  class_soft_max_policy-members.html  class_soft_max_policy.html  class_threshold_policy-members.html  class_threshold_policy.html  class_value_agent-members.html  class_value_agent.html  functions_func.html  functions_vars.html  hierarchy.html  md__r_e_a_d_m_e.html  pages.html  q_values_8h_source.html  struct_agent_test-members.html
docs/latex/: class_agent.eps  class_num2_d_table.tex  class_policy.eps  class_policy.tex  class_threshold_policy.tex  (+4 more)
html/: _agent_8h_source.html  _environment_8h_source.html  _num2_d_table_8h_source.html  _policy_8h_source.html  annotated.html  class_agent-members.html  class_agent.html  class_environment-members.html  class_environment.html  class_environment_1_1_response-members.html  class_environment_1_1_response.html  class_num2_d_table-members.html  class_num2_d_table.html  class_policy-members.html  class_policy.html  class_q_values-members.html  class_q_values.html  class_soft_max_policy-members.html  class_soft_max_policy.html  class_threshold_policy-members.html  class_threshold_policy.html  class_value_agent-members.html  class_value_agent.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  pages.html  q_values_8h_source.html  struct_agent_test-members.html  struct_agent_test.html
latex/: annotated.tex  class_agent.tex  class_environment.tex  class_environment_1_1_response.tex  class_q_values.tex  class_soft_max_policy.eps  class_soft_max_policy.tex  class_threshold_policy.eps  class_value_agent.tex  refman.tex  struct_agent_test.eps  struct_agent_test.tex
(+34 files in other folders)
